--- a/index.html
+++ b/index.html
@@ -170,14 +170,20 @@
                                 class="absolute -left-3 top-3 bg-blue-500 rounded-full w-6 h-6 text-white flex items-center justify-center">
                                 <button onclick="toggleDetails('job3')" class="focus:outline-none">+</button>
                             </div>
-                            <h3 class="text-xl font-semibold text-blue-600 dark:text-blue-400">Web Development Intern
+                            <h3 class="text-xl font-semibold text-blue-600 dark:text-blue-400">Software Engineer Intern
                             </h3>
-                            <p class="text-gray-500 dark:text-gray-400">Aadhar Medical and Educational Trust</p>
+                            <p class="text-gray-500 dark:text-gray-400">Genesys</p>
                             <span
-                                class="text-xs bg-blue-200 text-blue-700 dark:bg-blue-600 dark:text-white rounded-full px-3 py-1 inline-block mt-2">Sep
-                                2022 - Oct 2022</span>
+                                class="text-xs bg-blue-200 text-blue-700 dark:bg-blue-600 dark:text-white rounded-full px-3 py-1 inline-block mt-2">May
+                                2024 - Aug 2024</span>
                             <div id="details-job3" class="hidden mt-4 text-gray-600 dark:text-gray-400">
-                                <p>Worked on developing user-friendly web interfaces for healthcare applications.</p>
+                                <p>- Implements automated testing procedures for the front end, optimizing testing
+                                    efficiency and accuracy. <br>
+                                    - Conducts thorough bug detection, contributing to the enhancement of product
+                                    reliability and performance.<br>
+                                    - Focuses on improving accessibility standards and ensuring overall product quality,
+                                    enhancing user experience.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -190,13 +196,21 @@
                                 class="absolute -right-3 top-3 bg-blue-500 rounded-full w-6 h-6 text-white flex items-center justify-center">
                                 <button onclick="toggleDetails('job4')" class="focus:outline-none">+</button>
                             </div>
-                            <h3 class="text-xl font-semibold text-blue-600 dark:text-blue-400">Software Engineer</h3>
-                            <p class="text-gray-500 dark:text-gray-400">Zeus Learning</p>
+                            <h3 class="text-xl font-semibold text-blue-600 dark:text-blue-400">Software Engineer Intern
+                            </h3>
+                            <p class="text-gray-500 dark:text-gray-400">Relai
+                            </p>
                             <span
-                                class="text-xs bg-blue-200 text-blue-700 dark:bg-blue-600 dark:text-white rounded-full px-3 py-1 inline-block mt-2">Jun
-                                2024 - Present</span>
+                                class="text-xs bg-blue-200 text-blue-700 dark:bg-blue-600 dark:text-white rounded-full px-3 py-1 inline-block mt-2">June
+                                2023 - Aug 2023</span>
                             <div id="details-job4" class="hidden mt-4 text-gray-600 dark:text-gray-400">
-                                <p>Contributed to various software development projects and system improvements.</p>
+                                <p>- Conducted UX research for template designs, and contacted 600 businesses for
+                                    user-focused wireframes. <br>
+                                    - Developed a full-stack software architecture using JS, HTML, Node.js, and React
+                                    for their new mobile app.<br>
+                                    - Enhanced app functionality by integrating multiple APIs, resulting in a 25%
+                                    increase in user engagement.
+                                </p>
                             </div>
                         </div>
                         <div class="w-5/12"></div>
