--- a/index.html
+++ b/index.html
@@ -136,9 +136,19 @@
                                 class="text-xs bg-blue-200 text-blue-700 dark:bg-blue-600 dark:text-white rounded-full px-3 py-1 inline-block mt-2">Aug
                                 2023 - Present</span>
                             <div id="details-job1" class="hidden mt-4 text-gray-600 dark:text-gray-400">
-                                <p>Conducted research and reviewed articles for academic thesis development.</p>
+                                <p>- Assist in creating a robust thesis statement by reviewing over 40 articles in the
+                                    fields of computing and education. <br>
+                                    - Refine goals for African computer science education through discussions,
+                                    identifying three impactful strategies. <br>
+                                    - Review 25+ CHI (Conference on Human Factors in Computing Systems) articles'
+                                    adherence to accessibility rules.
+                                </p>
                             </div>
                         </div>
+                    </div>
+
+                    <!-- Right Side Timeline Item -->
+                    <div class="mb-8 flex items-center justify-between w-full">
                     </div>
 
                     <!-- Right Side Timeline Item -->
@@ -155,7 +165,16 @@
                                 class="text-xs bg-blue-200 text-blue-700 dark:bg-blue-600 dark:text-white rounded-full px-3 py-1 inline-block mt-2">Sept
                                 2023 - Present</span>
                             <div id="details-job2" class="hidden mt-4 text-gray-600 dark:text-gray-400">
-                                <p>Assisted in lab sessions and provided feedback to students.</p>
+                                <p>- Supported project-based learning by mentoring students during Friday lab sessions,
+                                    assisting in the development, debugging, and documentation of 25 semester-long
+                                    Python projects, and ensuring compliance with best practices such as PEP8. <br>
+                                    - Provided online assistance to 15+ students, answering queries and offering
+                                    guidance on Python programming challenges to enhance their learning experience and
+                                    project outcomes. <br>
+                                    - Guided students through programming exercises to reinforce Python fundamentals and
+                                    resolved individual queries on key topics, including control structures, arrays,
+                                    recursion, and file I/O.
+                                </p>
                             </div>
                         </div>
                         <div class="w-5/12"></div>
@@ -215,6 +234,36 @@
                         </div>
                         <div class="w-5/12"></div>
                     </div>
+
+                    <!-- Left Side Timeline Item -->
+                    <div class="mb-8 flex items-center justify-between w-full">
+                        <div class="w-5/12"></div>
+                        <div
+                            class="w-5/12 bg-white dark:bg-gray-800 rounded-lg p-6 shadow-lg relative transform -translate-y-4">
+                            <div
+                                class="absolute -left-3 top-3 bg-blue-500 rounded-full w-6 h-6 text-white flex items-center justify-center">
+                                <button onclick="toggleDetails('job5')" class="focus:outline-none">+</button>
+                            </div>
+                            <h3 class="text-xl font-semibold text-blue-600 dark:text-blue-400">Group Planner and Dock
+                                Hand
+                            </h3>
+                            <p class="text-gray-500 dark:text-gray-400">Guest Services, Inc. </p>
+                            <span
+                                class="text-xs bg-blue-200 text-blue-700 dark:bg-blue-600 dark:text-white rounded-full px-3 py-1 inline-block mt-2">May
+                                2024 - Aug 2024</span>
+                            <div id="details-job5" class="hidden mt-4 text-gray-600 dark:text-gray-400">
+                                <p>- Arranged multiple large group events at Boating in DC's various locations with over
+                                    100 people. <br>
+                                    - Maintained daily and effective communication with clients, ensuring customers'
+                                    needs are met.<br>
+                                    - Led group tours of up to 30+ people on kayaks and delivered educational facts
+                                    about Washington, DC.
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
