--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                     class="text-gray-800 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400">About</a>
                 <a href="#projects"
                     class="text-gray-800 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400">Projects</a>
+                <a href="./art.html"
+                    class="text-gray-800 dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400">Art</a>
                 <button id="themeToggle"
                     class="p-2 rounded-lg bg-dark dark:bg-light text-light dark:text-dark w-10 h-10 flex items-center justify-center">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
